Updates to privates (we should probably move them to .gitignore)
Former-commit-id: fe2e013cd9af0dcb7413687e823f3bde875c7220

--- a/tools/jolie2dummy/nbproject/private/private.properties
+++ b/tools/jolie2dummy/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=/Users/fmontesi/Library/Application Support/NetBeans/8.0.1/build.properties
+user.properties.file=/home/fmontesi/.netbeans/8.0.2/build.properties
