--- a/tools/jolie2surface/nbproject/private/private.properties
+++ b/tools/jolie2surface/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/fmontesi/Library/Application Support/NetBeans/8.0.1/build.properties
+user.properties.file=/home/fmontesi/.netbeans/8.0.2/build.properties
