--- a/buildconfig/build.properties
+++ b/buildconfig/build.properties
@@ -17,6 +17,7 @@ project.sodeps=extensions/sodeps
 project.jsonrpc=extensions/jsonrpc
 project.xmlrpc=extensions/xmlrpc
 project.localsocket=extensions/localsocket
+project.local=extensions/local
 project.metaservice-java=support/metaservice-java
 project.coreJavaServices=javaServices/coreJavaServices
 project.monitorJavaServices=javaServices/monitorJavaServices
