--- a/extensions/local/nbproject/private/private.properties
+++ b/extensions/local/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=/home/fmontesi/.netbeans/8.0.2/build.properties
+user.properties.file=/Users/mawo/Library/Application Support/NetBeans/8.0.1/build.properties
