Support for runnin tests from ant
Former-commit-id: d223c6accd1024ddcdefdb967b8b2f8a3108ccf7

--- a/build.xml
+++ b/build.xml
@@ -363,4 +363,17 @@ Please make sure that:
 		<antcall target="-create-unix-launchers" />
 		<antcall target="-create-windows-launchers" />
     </target>
+
+    <target name="-test-unix" unless="isWindows">
+    	<exec executable="sh" dir="test">
+    		<env key="JOLIE_HOME" file="dist/jolie" />
+    		<arg value="../dist/launchers/unix/jolie" />
+    		<arg value="test.ol" />
+    	</exec>
+    </target>
+
+    <target name="test"><!-- depends="dist"> -->
+    	<antcall target="-test-unix" />
+		<!-- <antcall target="-test-windows" /> -->
+    </target>
 </project>
