added launch command for "ant test" under Windows
Former-commit-id: ff1977d38f3c59ce08877f6f1c40617dd4e5c68e

--- a/build.xml
+++ b/build.xml
@@ -373,6 +373,12 @@ Please make sure that:
 	</target>
 
 	<target name="-test-windows" if="isWindows">
+		<exec executable="cmd" dir="test">
+			<env key="JOLIE_HOME" file="dist\jolie" />
+			<arg value="/c" />
+			<arg value='..\dist\launchers\windows\jolie.bat --charset "utf-8"' />
+			<arg value="test.ol" />
+		</exec>
 	</target>
 
 	<target name="test">
