--- a/build.xml
+++ b/build.xml
@@ -372,8 +372,17 @@ Please make sure that:
     	</exec>
     </target>
 
+    <target name="-test-windows" if="isWindows">
+        <exec executable="cmd" dir="test">
+            <env key="JOLIE_HOME" file="dist\jolie" />
+            <arg value="/c" />
+            <arg value='..\dist\launchers\windows\jolie.bat --charset "utf-8"' />
+            <arg value="test.ol" />
+        </exec>
+    </target>
+
     <target name="test"><!-- depends="dist"> -->
     	<antcall target="-test-unix" />
-		<!-- <antcall target="-test-windows" /> -->
+		<antcall target="-test-windows" />
     </target>
 </project>
