--- a/build.xml
+++ b/build.xml
@@ -46,48 +46,40 @@
     <target name="-create-windows-launchers">
 		<echo message="Creating Jolie Windows launcher script..." />
 		<echo file="${dist.launchers.windows}/jolie.bat">@echo off
-set params=%1 %2 %3 %4 %5 %6 %7 %8 %9
-java -ea:jolie... -ea:joliex... -jar %JOLIE_HOME%\jolie.jar -l .\lib\*;%JOLIE_HOME%\lib;%JOLIE_HOME%\javaServices\*;%JOLIE_HOME%\extensions\* -i %JOLIE_HOME%\include %params%
+java -ea:jolie... -ea:joliex... -jar %JOLIE_HOME%\jolie.jar -l .\lib\*;%JOLIE_HOME%\lib;%JOLIE_HOME%\javaServices\*;%JOLIE_HOME%\extensions\* -i %JOLIE_HOME%\include %*
 		</echo>
 		<echo message="Creating JolieC (Jolie Compiler) Windows launcher script..." />
 		<echo file="${dist.launchers.windows}/joliec.bat">@echo off
-set params=%1 %2 %3 %4 %5 %6 %7 %8 %9
-java -ea:jolie... -ea:joliex... -cp %JOLIE_HOME%\jolie.jar;%JOLIE_HOME%\lib\libjolie.jar;%JOLIE_HOME%\tools\joliec.jar jolie.compiler.Main -l %JOLIE_HOME%\lib;%JOLIE_HOME%\javaServices\*;%JOLIE_HOME%\extensions\* -i %JOLIE_HOME%\include %params%
+java -ea:jolie... -ea:joliex... -cp %JOLIE_HOME%\jolie.jar;%JOLIE_HOME%\lib\libjolie.jar;%JOLIE_HOME%\tools\joliec.jar jolie.compiler.Main -l %JOLIE_HOME%\lib;%JOLIE_HOME%\javaServices\*;%JOLIE_HOME%\extensions\* -i %JOLIE_HOME%\include %*
 		</echo>
 
 		<echo message="Creating Jolie2Java Windows launcher script..." />
 		<echo file="${dist.launchers.windows}/jolie2java.bat">@echo off
-set params=%1 %2 %3 %4 %5 %6 %7 %8 %9
-java -ea:jolie... -ea:joliex... -cp %JOLIE_HOME%\jolie.jar;%JOLIE_HOME%\lib\libjolie.jar;%JOLIE_HOME%\tools\jolie2java.jar;%JOLIE_HOME%\lib\jolie-gwt.jar joliex.java.Jolie2Java -l %JOLIE_HOME%\lib;%JOLIE_HOME%\javaServices\*;%JOLIE_HOME%\extensions\* -i %JOLIE_HOME%\include %params%
+java -ea:jolie... -ea:joliex... -cp %JOLIE_HOME%\jolie.jar;%JOLIE_HOME%\lib\libjolie.jar;%JOLIE_HOME%\tools\jolie2java.jar;%JOLIE_HOME%\lib\jolie-gwt.jar joliex.java.Jolie2Java -l %JOLIE_HOME%\lib;%JOLIE_HOME%\javaServices\*;%JOLIE_HOME%\extensions\* -i %JOLIE_HOME%\include %*
 		</echo>
 
 		<echo message="Creating Jolie2Surface Windows launcher script..." />
 		<echo file="${dist.launchers.windows}/jolie2surface.bat">@echo off
-set params=%1 %2 %3 %4 %5 %6 %7 %8 %9
-java -ea:jolie... -ea:joliex... -cp %JOLIE_HOME%\jolie.jar;%JOLIE_HOME%\lib\libjolie.jar;%JOLIE_HOME%\tools\jolie2surface.jar joliex.surface.GetSurface -l %JOLIE_HOME%\lib;%JOLIE_HOME%\javaServices\*;%JOLIE_HOME%\extensions\* -i %JOLIE_HOME%\include %params%
+java -ea:jolie... -ea:joliex... -cp %JOLIE_HOME%\jolie.jar;%JOLIE_HOME%\lib\libjolie.jar;%JOLIE_HOME%\tools\jolie2surface.jar joliex.surface.GetSurface -l %JOLIE_HOME%\lib;%JOLIE_HOME%\javaServices\*;%JOLIE_HOME%\extensions\* -i %JOLIE_HOME%\include %*
 		</echo>
 
 		<echo message="Creating Jolie2Dummy Windows launcher script..." />
 		<echo file="${dist.launchers.windows}/jolie2dummy.bat">@echo off
-set params=%1 %2 %3 %4 %5 %6 %7 %8 %9
-java -ea:jolie... -ea:joliex... -cp %JOLIE_HOME%\jolie.jar;%JOLIE_HOME%\lib\libjolie.jar;%JOLIE_HOME%\tools\jolie2dummy.jar joliex.dummycreator.JolieDummyCreator -l %JOLIE_HOME%\lib;%JOLIE_HOME%\javaServices\*;%JOLIE_HOME%\extensions\* -i %JOLIE_HOME%\include %params%
+java -ea:jolie... -ea:joliex... -cp %JOLIE_HOME%\jolie.jar;%JOLIE_HOME%\lib\libjolie.jar;%JOLIE_HOME%\tools\jolie2dummy.jar joliex.dummycreator.JolieDummyCreator -l %JOLIE_HOME%\lib;%JOLIE_HOME%\javaServices\*;%JOLIE_HOME%\extensions\* -i %JOLIE_HOME%\include %*
 		</echo>
 
 		<echo message="Creating Jolie2Wsdl Windows launcher script..." />
 		<echo file="${dist.launchers.windows}/jolie2wsdl.bat">@echo off
-set params=%1 %2 %3 %4 %5 %6 %7 %8 %9
-java -ea:jolie... -ea:joliex... -cp %JOLIE_HOME%\jolie.jar;%JOLIE_HOME%\lib\libjolie.jar;%JOLIE_HOME%\tools\jolie2wsdl.jar;%JOLIE_HOME%\lib\wsdl4j.jar joliex.wsdl.Jolie2Wsdl -l %JOLIE_HOME%\lib;%JOLIE_HOME%\javaServices\*;%JOLIE_HOME%\extensions\* -i %JOLIE_HOME%\include %params%
+java -ea:jolie... -ea:joliex... -cp %JOLIE_HOME%\jolie.jar;%JOLIE_HOME%\lib\libjolie.jar;%JOLIE_HOME%\tools\jolie2wsdl.jar;%JOLIE_HOME%\lib\wsdl4j.jar joliex.wsdl.Jolie2Wsdl -l %JOLIE_HOME%\lib;%JOLIE_HOME%\javaServices\*;%JOLIE_HOME%\extensions\* -i %JOLIE_HOME%\include %*
 		</echo>
 
 		<echo message="Creating JolieDoc (Jolie Documentation tool) Windows launcher script..." />
 		<echo file="${dist.launchers.windows}/joliedoc.bat">@echo off
-set params=%1 %2 %3 %4 %5 %6 %7 %8 %9
-java -ea:jolie... -ea:joliex... -cp %JOLIE_HOME%\jolie.jar;%JOLIE_HOME%\lib\libjolie.jar;%JOLIE_HOME%\tools\joliedoc.jar jolie.doc.JolieDoc -l %JOLIE_HOME%\lib;%JOLIE_HOME%\javaServices\*;%JOLIE_HOME%\extensions\* -i %JOLIE_HOME%\include %params%
+java -ea:jolie... -ea:joliex... -cp %JOLIE_HOME%\jolie.jar;%JOLIE_HOME%\lib\libjolie.jar;%JOLIE_HOME%\tools\joliedoc.jar jolie.doc.JolieDoc -l %JOLIE_HOME%\lib;%JOLIE_HOME%\javaServices\*;%JOLIE_HOME%\extensions\* -i %JOLIE_HOME%\include %*
 		</echo>
 		<echo message="Creating WSDL2Jolie Windows launcher script..." />
 		<echo file="${dist.launchers.windows}/wsdl2jolie.bat">@echo off
-set params=%1 %2 %3 %4 %5 %6 %7 %8 %9
-jolie %JOLIE_HOME%\tools\wsdl2jolie.ol %params%
+jolie %JOLIE_HOME%\tools\wsdl2jolie.ol %*
 		</echo>
 	</target>
 
