prepare scanner to handle additional documentation commens

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ build/
 /extensions/local/nbproject/private/
 /lib/jolie-js/nbproject/private/
 /tools/jolie2surface/nbproject/private/
+/libjolie/build
