--- a/buildconfig/build.properties
+++ b/buildconfig/build.properties
@@ -6,6 +6,7 @@ project.jolie-js=lib/jolie-js
 project.jolie-ssl=lib/jolie-ssl
 project.jolie-gwt=support/jolie-gwt
 project.jolie-java=support/jolie-java
+project.auto=extensions/auto
 project.http=extensions/http
 project.https=extensions/https
 project.javascript=extensions/javascript
