Fix project dependencies for the auto extension.
Former-commit-id: a432c559a64c05dcadffcc287ffaec203c29bad6

--- a/extensions/auto/nbproject/project.properties
+++ b/extensions/auto/nbproject/project.properties
@@ -83,7 +83,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
-project.jolie=../../../jolie/jolie
+project.jolie=../../jolie
 project.libjolie=../../libjolie
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
 reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
