integrating netty in HTTP protocol

--- a/extensions/http/nbproject/project.properties
+++ b/extensions/http/nbproject/project.properties
@@ -26,18 +26,21 @@ endorsed.classpath=
 excludes=
 file.reference.gwt-servlet.jar=../../lib/gwt/gwt-servlet.jar
 file.reference.http-src=src
+file.reference.netty-all-4.1.11.Final.jar=../../lib/netty/netty-all-4.1.11.Final.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.jolie.jar}:\
     ${reference.libjolie.jar}:\
     ${file.reference.gwt-servlet.jar}:\
+    ${file.reference.netty-all-4.1.11.Final.jar}:\
     ${reference.jolie-gwt.jar}:\
     ${reference.jolie-xml.jar}:\
     ${reference.jolie-js.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
