--- a/jolie/nbproject/project.properties
+++ b/jolie/nbproject/project.properties
@@ -26,12 +26,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jolie-src=src
+file.reference.netty-all-4.1.11.Final.jar=../lib/netty/netty-all-4.1.11.Final.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.libjolie.jar}
+    ${reference.libjolie.jar}:\
+    ${file.reference.netty-all-4.1.11.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
