renamed netty-all_*.Final.jar to netty.jar
Former-commit-id: a7725431388cfde4412fbb28ba2b21e2b382c674

--- a/extensions/http/nbproject/project.properties
+++ b/extensions/http/nbproject/project.properties
@@ -26,14 +26,14 @@ endorsed.classpath=
 excludes=
 file.reference.gwt-servlet.jar=../../lib/gwt/gwt-servlet.jar
 file.reference.http-src=src
-file.reference.netty-all-4.1.11.Final.jar=../../lib/netty/netty-all-4.1.11.Final.jar
+file.reference.netty.jar=../../lib/netty/netty.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.jolie.jar}:\
     ${reference.libjolie.jar}:\
     ${file.reference.gwt-servlet.jar}:\
-    ${file.reference.netty-all-4.1.11.Final.jar}:\
+    ${file.reference.netty.jar}:\
     ${reference.jolie-gwt.jar}:\
     ${reference.jolie-xml.jar}:\
     ${reference.jolie-js.jar}
