--- a/build.xml
+++ b/build.xml
@@ -102,7 +102,7 @@ jolie %JOLIE_HOME%\tools\wsdl2jolie.ol %*
 		<echo message="Creating Jolie Unix launcher script..." />
 		<echo file="${dist.launchers.unix}/jolie">#!/bin/sh
 
-java -ea:jolie... -ea:joliex... -Djava.rmi.server.codebase=file:/$JOLIE_HOME/extensions/rmi.jar -cp $JOLIE_HOME/lib/netty-all-4.1.1.Final.jar:$JOLIE_HOME/lib/$JOLIE_HOME/lib/libjolie.jar:$JOLIE_HOME/jolie.jar jolie.Jolie -l ./lib/*:$JOLIE_HOME/lib:$JOLIE_HOME/javaServices/*:$JOLIE_HOME/extensions/* -i $JOLIE_HOME/include "$@"
+java -ea:jolie... -ea:joliex... -Djava.rmi.server.codebase=file:/$JOLIE_HOME/extensions/rmi.jar -cp $JOLIE_HOME/lib/netty.jar:$JOLIE_HOME/lib/$JOLIE_HOME/lib/libjolie.jar:$JOLIE_HOME/jolie.jar jolie.Jolie -l ./lib/*:$JOLIE_HOME/lib:$JOLIE_HOME/javaServices/*:$JOLIE_HOME/extensions/* -i $JOLIE_HOME/include "$@"
 		</echo>
 		<chmod file="${dist.launchers.unix}/jolie" perm="a+x"/>
 
@@ -354,7 +354,7 @@ Please make sure that:
 		<copy file="${libs.smackx}" tofile="${dist.jolie}/lib/smackx.jar"/>
 		<copy file="${libs.commons-lang3}" tofile="${dist.jolie}/lib/commons-lang3.jar"/>
 		<copy file="${libs.uri-templates}" tofile="${dist.jolie}/lib/uri-templates.jar"/>
-		<copy file="${libs.netty}" tofile="${dist.jolie}/lib/netty-all-4.1.11.Final.jar"/>
+		<copy file="${libs.netty}" tofile="${dist.jolie}/lib/netty.jar"/>
 
 		<antcall target="-create-unix-launchers" />
 		<antcall target="-create-windows-launchers" />
