integrated netty in JSONRPC protocol (fixes needed)
Former-commit-id: b6f29167ccaf6d99b3f91076469bc011f741067e

--- a/extensions/jsonrpc/nbproject/project.properties
+++ b/extensions/jsonrpc/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 application.title=jsonrpc
 application.vendor=fmontesi
@@ -23,6 +24,7 @@ dist.jar=${dist.dir}/jsonrpc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.netty.jar=../../lib/netty/netty.jar
 file.reference.sodep-src=src
 includes=**
 jar.compress=false
@@ -30,14 +32,16 @@ javac.classpath=\
     ${reference.jolie.jar}:\
     ${reference.libjolie.jar}:\
     ${reference.http.jar}:\
-    ${reference.jolie-js.jar}
+    ${reference.jolie-js.jar}:\
+    ${file.reference.netty.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
