Added mqtt client java support
Integration with netty-mqtt literature library


Former-commit-id: ed3854b490793d840288db9dc24c66680da22223

--- a/extensions/mqtt/nbproject/project.properties
+++ b/extensions/mqtt/nbproject/project.properties
@@ -29,14 +29,19 @@ dist.jar=${dist.dir}/mqtt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.guava-19.0.jar=../../lib/guava/guava-19.0.jar
+file.reference.jsr305-3.0.1.jar=../../lib/jsr305/jsr305-3.0.1.jar
 file.reference.mqtt-src=src
 file.reference.netty.jar=../../lib/netty/netty.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.netty.jar}
+    ${file.reference.netty.jar}:\
+    ${reference.jolie.jar}:\
+    ${file.reference.jsr305-3.0.1.jar}:\
+    ${file.reference.guava-19.0.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
@@ -59,11 +64,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=netty.EchoServer
+main.class=test.TestSubscriber
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.jolie=../../jolie
+reference.jolie.jar=${project.jolie}/dist/jolie.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
