Changed package configuration added moquette test client
Former-commit-id: 5b5a2e450a5db4219e43da5f587bad6d73ff3e5f

--- a/extensions/mqtt/nbproject/project.properties
+++ b/extensions/mqtt/nbproject/project.properties
@@ -60,6 +60,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.netty.jar=../../lib/netty-all-4.1.11.Final-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -82,4 +83,5 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.netty.jar=../../lib/netty-all-4.1.11.Final-sources.jar
 src.dir=${file.reference.mqtt-src}
