--- a/extensions/mqtt/nbproject/project.properties
+++ b/extensions/mqtt/nbproject/project.properties
@@ -65,7 +65,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=test.TestSubscriber
+main.class=testJolie.CreateCommChannel
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
