Added Mqtt Comm Core class
Former-commit-id: d7eb83d5b0d43b954154bae42fc4ee8dc15500d0

--- a/extensions/mqtt/nbproject/project.properties
+++ b/extensions/mqtt/nbproject/project.properties
@@ -65,7 +65,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=testJolie.CreateCommChannel
+main.class=testJolie.MqttCommCore
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
