Update project properties
Former-commit-id: ff796a59b06a226a000facb8207ab0a97a9a0415

--- a/buildconfig/build.properties
+++ b/buildconfig/build.properties
@@ -8,6 +8,8 @@ project.jolie-gwt=support/jolie-gwt
 project.jolie-java=support/jolie-java
 project.auto=extensions/auto
 project.http=extensions/http
+project.mqtt=extensions/mqtt
+project.coap=extensions/coap
 project.https=extensions/https
 project.javascript=extensions/javascript
 project.btl2cap=extensions/btl2cap
