--- a/extensions/coap/nbproject/project.properties
+++ b/extensions/coap/nbproject/project.properties
@@ -29,14 +29,12 @@ dist.jar=${dist.dir}/coap.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ncoap-core.jar=../../lib/nCoAP/ncoap-core.jar
 file.reference.netty.jar=../../lib/netty/netty.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.jolie.jar}:\
-    ${file.reference.netty.jar}:\
-    ${file.reference.ncoap-core.jar}
+    ${file.reference.netty.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
