--- a/extensions/mqtt/nbproject/project.properties
+++ b/extensions/mqtt/nbproject/project.properties
@@ -34,7 +34,7 @@ file.reference.mqtt-src=src
 file.reference.netty.jar=../../lib/netty/netty.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
-jar.compress=false
+jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.netty.jar}:\
@@ -53,15 +53,15 @@ javac.test.classpath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=true
+javadoc.author=false
 javadoc.encoding=${source.encoding}
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.private=true
-javadoc.splitindex=true
-javadoc.use=true
-javadoc.version=true
+javadoc.noindex=true
+javadoc.nonavbar=true
+javadoc.notree=true
+javadoc.private=false
+javadoc.splitindex=false
+javadoc.use=false
+javadoc.version=false
 javadoc.windowtitle=
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
