--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ build/
 *.class
 /extensions/mqtt/nbproject/private/
 /extensions/coap/nbproject/private/
+/extensions/coapMiddle/nbproject/private/
